feat(impact): unify dependency evidence and JDK models
Merge selected and verbose GraphML into winner-normalized module evidence and route dependency consumers through that boundary.

Add JDK model selection, mediation benchmark coverage, tests, and wiki updates.